Fixed broken css.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -264,7 +264,7 @@ svg:not(:root) {
 
 /* iframes */
 
-iframe_container {
+.iframe_container {
   position: relative;
   overflow: hidden;
   width: 100%;
